# BottAnalytics

./: .dockerignore  .env.example  .gitignore  Copy of Survey_Data_Model.xlsm  Dockerfile  README.md  fly.toml  justfile  railway.json
db/migrations/: 0001_init.sql
docker/: docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: architecture.md  deploy.md
etl/: Dockerfile  README.md  bootstrap.sh  pyproject.toml  uv.toml
etl/src/csat_etl/: __init__.py  cli.py  config.py  db.py  migrations.py  pipeline.py
etl/src/csat_etl/normalize/: __init__.py  labels.py  rows.py  slug.py
etl/src/csat_etl/readers/: __init__.py  xlsm.py
etl/src/csat_etl/writers/: __init__.py  dims.py  facts.py
etl/tests/: test_labels.py  test_rows.py  test_slug.py
web/: README.md  next.config.ts  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/app/compare/: loading.tsx  page.tsx
web/src/app/entities/: loading.tsx  page.tsx
web/src/app/settings/: actions.ts  compliance-form.tsx  page.tsx
web/src/app/teams/: loading.tsx  page.tsx
web/src/components/charts/: chart-tooltip.tsx  colors.ts  grouped-bar.tsx  horizontal-bar.tsx  sentiment-donut.tsx  sentiment-stack-bar.tsx  sentiment-treemap.tsx  sparkline.tsx  trend-area.tsx
web/src/components/exec/: alert-strip.tsx  compliance-stat.tsx  ranking-list.tsx
web/src/components/filters/: filter-bar-loader.tsx  filter-bar.tsx  multi-select.tsx
web/src/components/glass/: empty-state.tsx  glass-card.tsx  glass-section.tsx  glass-skeleton.tsx  (+1 more)
web/src/lib/: env.ts
(+29 files in other folders)
