[project]
name = "csat-etl"
version = "0.1.0"
description = "ETL pipeline that loads the ADGE CSAT survey workbook into Supabase Postgres."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "psycopg[binary,pool]>=3.2.3",
    "python-dotenv>=1.0.1",
    "typer>=0.13.0",
    "rich>=13.9.4",
    "pydantic>=2.9.2",
]

[project.scripts]
csat-etl = "csat_etl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csat_etl"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-openpyxl",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer relies on function-call defaults via `typer.Option` / `typer.Argument`.
"src/csat_etl/cli.py" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["csat_etl"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
